Postgres reservations repository